--- a/.github/workflows/ci-cd.dev.yml
+++ b/.github/workflows/ci-cd.dev.yml
@@ -207,7 +207,7 @@ jobs:
         uses: actions/checkout@v3
   
       - name: Login to GitHub Container Registry
-        run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+        run: echo "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" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
   
       - name: Build Docker image
         run: |
