--- a/.github/workflows/ci-cd.dev.yml
+++ b/.github/workflows/ci-cd.dev.yml
@@ -207,11 +207,11 @@ jobs:
         uses: actions/checkout@v3
   
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
+        uses: docker/login-action@v3.3.0
         with:
           registry: ghcr.io
-          username: 'Ismail-Mouyahada'
-          password: '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'
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
    
       - name: Build Docker image
         run: |
