--- a/satsquare/.env.dev
+++ b/satsquare/.env.dev
@@ -3,8 +3,8 @@ POSTGRES_USER=postgres_dev
 POSTGRES_PASSWORD=dev_password
 POSTGRES_DB=sat_square_dev_db
 POSTGRES_PORT=5432
-DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POSTGRES_PORT}/${POSTGRES_DB}"
-NEXTAUTH_SECRET="dev_secret_key"
+DATABASE_URL="postgresql://dev:tT8s758l79WDINR8tKHtfKBr1oiWXpWY@dpg-cr7ervi3esus7388bamg-a.frankfurt-postgres.render.com/dev_db_satsquare"
+NEXTAUTH_SECRET="ldsfnkjfhsdqhguqshdughoudsqhouhodqshoghldqskjvohdskjvh"
 NEXT_PUBLIC_SITE_URL="http://localhost:3000"
 NEXT_PUBLIC_SOCKET_URL="http://localhost:5157"
 REDIS_URL="redis://localhost:6379"
