--- a/.github/workflows/ci-cd.dev.yml
+++ b/.github/workflows/ci-cd.dev.yml
@@ -222,8 +222,7 @@ jobs:
           export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
           export REDIS_URL="redis://localhost:6379"
           cd ./satsquare
-          docker compose up -d
-          docker build -t ghcr.io/ismail-mouyahada/master-satsquare-app:dev-${{ github.sha }} -f Dockerfile  .
+          docker build -t ghcr.io/ismail-mouyahada/master-satsquare-app:dev-${{ github.sha }} -f Dockerfile.dev .
   
       - name: Scan Docker image for vulnerabilities
         uses: aquasecurity/trivy-action@0.20.0
