--- a/.github/workflows/ci-cd.dev.yml
+++ b/.github/workflows/ci-cd.dev.yml
@@ -222,12 +222,12 @@ jobs:
           export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
           export REDIS_URL="redis://localhost:6379"
           cd ./satsquare
-          docker build -t ghcr.io/ismail-mouyahada/master-satsquare-app:dev-${{ github.sha }} -f Dockerfile.dev .
+          docker build -t ghcr.io/ismail-mouyahada/master-satsquare-app:dev -f Dockerfile.dev .
   
       - name: Scan Docker image for vulnerabilities
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: ghcr.io/ismail-mouyahada/master-satsquare-app:dev-${{ github.sha }}
+          image-ref: ghcr.io/ismail-mouyahada/master-satsquare-app:dev
   
       - name: Push Docker image to GitHub Container Registry
-        run: docker push ghcr.io/ismail-mouyahada/master-satsquare-app:latest
+        run: docker push ghcr.io/ismail-mouyahada/master-satsquare-app:dev
