--- a/.github/workflows/ci-cd.dev.yml
+++ b/.github/workflows/ci-cd.dev.yml
@@ -1,14 +1,17 @@
 name: CI/CD Dev Pipeline
 
 on:
+  # Déclenche le workflow sur les pushes vers la branche "develop"
   push:
     branches:
       - develop
+  # Déclenche le workflow sur les pull requests vers la branche "develop"
   pull_request:
     branches:
       - develop
 
 env:
+  # Variables d'environnement pour l'environnement de développement
   ENVIRONMENT: dev
   DATABASE_URL: ${{ secrets.DATABASE_URL }}
   NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
@@ -17,190 +20,169 @@ env:
   DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
 jobs:
- 
+  # Job de construction de l'application
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3 # Vérifie le code source de la branche cible
 
-  # build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+      - name: Run end-to-end tests
+        run: |
+          # Définit les variables d'environnement nécessaires pour les tests end-to-end
+          export DATABASE_URL=postgresql://dev:tT8s758l79WDINR8tKHtfKBr1oiWXpWY@dpg-cr7ervi3esus7388bamg-a.frankfurt-postgres.render.com/dev_db_satsquare
+          export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJXCPISJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
+          export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
+          export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
+          export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
+          export REDIS_URL="redis://localhost:6379"
+          cd ./satsquare
 
-  #     - name: Run end-to-end tests
-  #       run: |
-  #         export DATABASE_URL=postgresql://dev:tT8s758l79WDINR8tKHtfKBr1oiWXpWY@dpg-cr7ervi3esus7388bamg-a.frankfurt-postgres.render.com/dev_db_satsquare
-  #         export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJXCPISJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
-  #         export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
-  #         export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
-  #         export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
-  #         export REDIS_URL="redis://localhost:6379"
-  #         cd ./satsquare
+          # Installation des dépendances et préparation de l'application
+          npm install
+          npx prisma generate
+          npx prisma db push
+          npm run seed
+          npm run build
 
-  #         npm install
-  #         npx prisma generate
-  #         npx prisma db push
-  #         npm run seed
-  #         npm run build
-  # lint:
-  #   needs: [build]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+  # Job de linting du code source
+  lint:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  #     - name: Install dependencies
-  #       run: |
-  #         cd ./satsquare
-  #         npm ci
+      - name: Install dependencies
+        run: |
+          cd ./satsquare
+          npm ci # Installation des dépendances
 
-  #     - name: Run Linting
-  #       run: |
-  #         cd ./satsquare
-  #         npm run lint
-  # unit-tests:
-  #   needs: [build]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+      - name: Run Linting
+        run: |
+          cd ./satsquare
+          npm run lint # Exécute le linting
 
-  #     - name: Install dependencies
-  #       run: |
-  #         cd ./satsquare
-  #         npm ci
-  #         npm i jest-environment-jsdom jest
+  # Job pour les tests unitaires
+  unit-tests:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  #     - name: Run Jest Unit Tests
-  #       run: |
-  #         cd ./satsquare
-  #         npm run test
+      - name: Install dependencies
+        run: |
+          cd ./satsquare
+          npm ci
+          npm i jest-environment-jsdom jest # Installe Jest pour les tests unitaires
 
-  # e2e-tests:
-  #   needs: [build]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+      - name: Run Jest Unit Tests
+        run: |
+          cd ./satsquare
+          npm run test # Exécute les tests unitaires
 
-  #     - name: Run end-to-end tests
-  #       run: |
-  #         export DATABASE_URL=postgresql://dev:tT8s758l79WDINR8tKHtfKBr1oiWXpWY@dpg-cr7ervi3esus7388bamg-a.frankfurt-postgres.render.com/dev_db_satsquare
-  #         export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
-  #         export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
-  #         export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
-  #         export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
-  #         export REDIS_URL="redis://localhost:6379"
-  #         cd ./satsquare
+  # Job pour les tests end-to-end
+  e2e-tests:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  #         npm install
-  #         npx prisma generate
-  #         npx prisma db push
-  #         npm run seed
-  #         npm run build
-  #         # npm run test:e2e
+      - name: Run end-to-end tests
+        run: |
+          # Définit les variables d'environnement nécessaires pour les tests end-to-end
+          export DATABASE_URL=postgresql://dev:tT8s758l79WDINR8tKHtfKBr1oiWXpWY@dpg-cr7ervi3esus7388bamg-a.frankfurt-postgres.render.com/dev_db_satsquare
+          export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
+          export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
+          export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
+          export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
+          export REDIS_URL="redis://localhost:6379"
+          cd ./satsquare
 
-  # deps-vulnerability:
-  #   needs: [e2e-tests, build, unit-tests]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+          # Installation des dépendances et préparation de l'application pour les tests end-to-end
+          npm install
+          npx prisma generate
+          npx prisma db push
+          npm run seed
+          npm run build
+          # npm run test:e2e # Désactivé pour l'instant
 
-  #     - name: Create lock file
-  #       run: |
-  #         cd ./satsquare
-  #         npm install --package-lock-only
+  # Job pour la vérification des vulnérabilités des dépendances
+  deps-vulnerability:
+    needs: [e2e-tests, build, unit-tests]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  #     - name: Install dependencies
-  #       run: |
-  #         cd ./satsquare
-  #         npm ci
-  #         npm update
+      - name: Create lock file
+        run: |
+          cd ./satsquare
+          npm install --package-lock-only # Génère uniquement le fichier package-lock
 
-  #     - name: Install jest-environment-jsdom
-  #       run: |
-  #         cd ./satsquare
-  #         npm install jest-environment-jsdom --save-dev
+      - name: Install dependencies
+        run: |
+          cd ./satsquare
+          npm ci
+          npm update # Met à jour les dépendances
 
-  #     - name: Audit npm dependencies
-  #       run: |
-  #         cd ./satsquare
-  #         npm audit --audit-level=moderate
+      - name: Install jest-environment-jsdom
+        run: |
+          cd ./satsquare
+          npm install jest-environment-jsdom --save-dev # Installe une dépendance spécifique pour les tests
 
-  # codecov:
-  #   needs: [e2e-tests, build, unit-tests]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+      - name: Audit npm dependencies
+        run: |
+          cd ./satsquare
+          npm audit --audit-level=moderate # Audite les dépendances npm pour les vulnérabilités
 
-  #     - name: Install dependencies
-  #       run: |
-  #         cd ./satsquare
-  #         npm ci
-  #         npm i jest-environment-jsdom jest
+  # Job pour la couverture de code avec Codecov
+  codecov:
+    needs: [e2e-tests, build, unit-tests]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  #     - name: Run tests and generate coverage report
-  #       run: |
-  #         cd ./satsquare
-  #         npm run test -- --coverage
+      - name: Install dependencies
+        run: |
+          cd ./satsquare
+          npm ci
+          npm i jest-environment-jsdom jest # Installe les dépendances nécessaires pour les tests
 
-  #     - name: Upload coverage to Codecov
-  #       uses: codecov/codecov-action@v3
-  #       with:
-  #         token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Run tests and generate coverage report
+        run: |
+          cd ./satsquare
+          npm run test -- --coverage # Exécute les tests avec rapport de couverture
 
-  # lighthouse:
-  #   needs: [codecov, deps-vulnerability]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} # Utilise le token secret pour l'authentification
 
-  #     - name: Install dependencies
-  #       run: |
-  #         cd ./satsquare
-  #         npm install
+  # Job pour l'analyse de performance avec Lighthouse
+  lighthouse:
+    needs: [codecov, deps-vulnerability]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  #     - name: Run Lighthouse CI
-  #       run: |
-  #         cd ./satsquare
-  #         npx lhci autorun
+      - name: Install dependencies
+        run: |
+          cd ./satsquare
+          npm install # Installe les dépendances nécessaires
 
-  # notify:
-  #   needs: [lighthouse]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Notify Discord
-  #       uses: discord-actions/message@v2
-  #       with:
-  #         webhookUrl: "https://discord.com/api/webhooks/1278096229351293008/UdVm3whQn9wb_neR4tuS5TGFfFzaiAo4Jijwa0yuEks1GwoVdrV-lcsdvw5qlA0Kq9CN"
-  #         message: "On est la les BG"
-  #         username: "SatSuqare Development BOT"
-  #         # avatar: "https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
+      - name: Run Lighthouse CI
+        run: |
+          cd ./satsquare
+          npx lhci autorun # Exécute Lighthouse CI pour l'analyse de performance
 
-  #     - name: Notify Discord
-  #       if: success()
-  #       uses: discord-actions/message@v2
-  #       with:
-  #         webhookUrl: "https://discord.com/api/webhooks/1278096229351293008/UdVm3whQn9wb_neR4tuS5TGFfFzaiAo4Jijwa0yuEks1GwoVdrV-lcsdvw5qlA0Kq9CN"
-  #         message: "Bah Oui ça marche mon gars 🗺"
-
-  #     - name: Notify Discord
-  #       if: failure()
-  #       uses: discord-actions/message@v2
-  #       with:
-  #         webhookUrl: "https://discord.com/api/webhooks/1278096229351293008/UdVm3whQn9wb_neR4tuS5TGFfFzaiAo4Jijwa0yuEks1GwoVdrV-lcsdvw5qlA0Kq9CN"
-  #         message: "Ops tu as glissé mon pote ☣"
-
-  #     - name: Notify Discord
-  #       if: ${{ always() && contains(needs.*.result, 'failure') }}
-  #       uses: discord-actions/message@v2
-  #       with:
-  #         webhookUrl: "https://discord.com/api/webhooks/1278096229351293008/UdVm3whQn9wb_neR4tuS5TGFfFzaiAo4Jijwa0yuEks1GwoVdrV-lcsdvw5qlA0Kq9CN"
-  #         message: "C'était presque bon mon kiki ! 😇"
-
+  # Job pour construire l'image Docker et la pousser vers le registre
   docker-build:
-    # needs: lighthouse
+    needs: lighthouse
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -214,10 +196,11 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }} # Se connecte au registre de conteneurs GitHub
           
       - name: Build Docker image
         run: |
+          # Définit les variables d'environnement pour le build Docker
           export DATABASE_URL=postgresql://dev:tT8s758l79WDINR8tKHtfKBr1oiWXpWY@dpg-cr7ervi3esus7388bamg-a.frankfurt-postgres.render.com/dev_db_satsquare
           export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
           export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
@@ -225,12 +208,39 @@ jobs:
           export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
           export REDIS_URL="redis://localhost:6379"
           cd ./satsquare
-          docker build -t ghcr.io/ismail-mouyahada/master-satsquare-app:dev -f Dockerfile.dev .
+          docker build -t ghcr.io/ismail-mouyahada/master-satsquare-app:dev -f Dockerfile.dev . # Construit l'image Docker
   
       - name: Scan Docker image for vulnerabilities
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: ghcr.io/ismail-mouyahada/master-satsquare-app:dev
+          image-ref: ghcr.io/ismail-mouyahada/master-satsquare-app:dev # Scanne l'image Docker pour les vulnérabilités
   
       - name: Push Docker image to GitHub Container Registry
-        run: docker push ghcr.io/ismail-mouyahada/master-satsquare-app:dev
+        run: docker push ghcr.io/ismail-mouyahada/master-satsquare-app:dev # Pousse l'image Docker vers le registre
+
+  # Job pour notifier l'état de la pipeline sur Discord
+  notify:
+    needs: [docker-build,lighthouse]
+    runs-on: ubuntu-latest
+    steps:
+    
+      - name: Notify Discord
+        if: success() # Notifie en cas de succès
+        uses: discord-actions/message@v2
+        with:
+          webhookUrl: "https://discord.com/api/webhooks/1278096229351293008/UdVm3whQn9wb_neR4tuS5TGFfFzaiAo4Jijwa0yuEks1GwoVdrV-lcsdvw5qlA0Kq9CN"
+          message: "Bah Oui ça marche mon gars 🗺"
+
+      - name: Notify Discord
+        if: failure() # Notifie en cas d'échec
+        uses: discord-actions/message@v2
+        with:
+          webhookUrl: "https://discord.com/api/webhooks/1278096229351293008/UdVm3whQn9wb_neR4tuS5TGFfFzaiAo4Jijwa0yuEks1GwoVdrV-lcsdvw5qlA0Kq9CN"
+          message: "Ops tu as glissé mon pote ☣"
+
+      - name: Notify Discord
+        if: ${{ always() && contains(needs.*.result, 'failure') }} # Notifie si une partie du pipeline a échoué
+        uses: discord-actions/message@v2
+        with:
+          webhookUrl: "https://discord.com/api/webhooks/1278096229351293008/UdVm3whQn9wb_neR4tuS5TGFfFzaiAo4Jijwa0yuEks1GwoVdrV-lcsdvw5qlA0Kq9CN"
+          message: "C'était presque bon mon kiki ! 😇"
