--- a/.github/workflows/ci-cd.test.yml
+++ b/.github/workflows/ci-cd.test.yml
@@ -18,7 +18,11 @@ env:
   NEXT_PUBLIC_SITE_URL: ${{ secrets.NEXT_PUBLIC_SITE_URL }}
   NEXT_PUBLIC_SOCKET_URL: ${{ secrets.NEXT_PUBLIC_SOCKET_URL }}
   DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-
+  
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true # Annule toute exécution précédente du même workflow si un nouveau est déclenché
+  
 jobs:
   # Job de construction de l'application
   build:
