--- a/.github/workflows/ci-cd.dev.yml
+++ b/.github/workflows/ci-cd.dev.yml
@@ -207,6 +207,11 @@ jobs:
           export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
           export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
           export REDIS_URL="redis://localhost:6379"
+          npm install
+          npx prisma generate
+          npx prisma db push
+          npm run seed
+          npm run build
           cd ./satsquare
           docker build -t ghcr.io/ismail-mouyahada/master-satsquare-app:dev -f Dockerfile.dev . # Construit l'image Docker
   
