--- a/.github/workflows/ci-cd.prod.yml
+++ b/.github/workflows/ci-cd.prod.yml
@@ -212,6 +212,11 @@ jobs:
           export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
           export REDIS_URL="redis://localhost:6379"
           cd ./satsquare
+          npm install
+          npx prisma generate
+          npx prisma db push
+          npm run seed
+          npm run build
           docker build -t ghcr.io/ismail-mouyahada/master-satsquare-app:latest -f Dockerfile.prod . # Construit l'image Docker
   
       - name: Scan Docker image for vulnerabilities
